--- a/xaml_list/xaml_list/project.json
+++ b/xaml_list/xaml_list/project.json
@@ -1,12 +1,13 @@
 ﻿{
   "dependencies": {
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.4",
-    "Microsoft.Toolkit.Uwp.UI.Controls": "2.1.1",
-    "Newtonsoft.Json": "10.0.3",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.7",
+    "Microsoft.Toolkit.Uwp.UI.Controls": "2.2.0",
+    "MvvmLight": "5.4.1",
+    "Newtonsoft.Json": "11.0.1",
     "PullToRefresh.UWP": "0.3.4"
   },
   "frameworks": {
-    "uap10.0": {}
+    "uap10.0.10586": {}
   },
   "runtimes": {
     "win10-arm": {},
